refactor(auth): 重构认证服务缓存管理
- 替换直接操作Redis为统一CacheService接口
- 实现登录态缓存的一次性写入机制
- 添加异步缓存失效事件监听器
- 优化JWT过滤器中的Token校验逻辑
- 实现权限缓存预热功能减少冷启动延迟
- 添加分布式锁防止缓存击穿问题
- 简化登出流程并优化日志输出
- 增加数据源表名缓存的手动刷新功能